fixing the spacing again

--- a/css/screen.css
+++ b/css/screen.css
@@ -208,23 +208,42 @@ label {
 /* ===== STATE STYLES ======= */
 
 
-
-
 body {
   background-color: #ababab;
   font-family: 'Love Ya Like A Sister', 'Arial', sans-serif;
   margin: 0;
   padding: 0;
+  text-align: center;
+}
+
+#content {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
+  padding: 2rem;
+  width: 100%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #e6e6e6;
+  padding: 3rem;
+  border-radius: 100px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
+  max-width: 400px;
+  width: 90%;
 }
 
 h1 {
   font-size: 3rem;
-  margin-bottom: .5rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
 }
+
 
 p {
   font-size: 1.5rem;
@@ -245,22 +264,6 @@ label {
   display: block;
   font-size: 1rem;
   margin-bottom: 1rem;
-}
-
-#content {
-  color: #424242;
-  font-size: 1.5rem;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-form {
-  background-color: #e6e6e6;
-  padding: 3rem;
-  border-radius: 100px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
-  max-width: 400px;
-  width: 90%;
 }
 
 
